# PARSEBOT-KYIV

./: Readme.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
handlers/: __init__.py  keyboards.py  parser.py  telegram.py
src/: __main__.py
src/handlers/: __init__.py  keyboards.py  parser.py  telegram.py
