[tool.poetry]
name = "parsebot-kyiv"
version = "0.1.0"
description = ""
authors = ["salko-ua <chips69jamil69game@gmail.com>"]
readme = "README.md"
packages = [{include = "parsebot_kyiv"}]

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^23.2.1"
aiogram = "^3.4.1"
aiohttp = "^3.9.3"
aiosignal = "^1.3.1"
annotated-types = "^0.6.0"
apykuma = "^1.2.0"
async-generator = "^1.10"
async-timeout = "^4.0.3"
attrs = "^23.2.0"
babel = "^2.14.0"
beautifulsoup4 = "^4.12.3"
certifi = "^2024.2.2"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
colorama = "^0.4.6"
exceptiongroup = "^1.2.0"
frozenlist = "^1.4.1"
h11 = "^0.14.0"
idna = "^3.6"
lxml = "^5.2.1"
magic-filter = "^1.0.12"
multidict = "^6.0.5"
outcome = "^1.3.0.post0"
pycparser = "^2.22"
pysocks = "^1.7.1"
pytz = "^2024.1"
requests = "^2.31.0"
selenium = "^4.19.0"
sniffio = "^1.3.1"
sortedcontainers = "^2.4.0"
soupsieve = "^2.5"
translate = "^3.6.1"
trio = "^0.25.0"
trio-websocket = "^0.11.1"
typing-extensions = "^4.10.0"
urllib3 = "^2.2.1"
wsproto = "^1.2.0"
yarl = "^1.9.4"

[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
dumb-init = "~1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
